samples/sentiment-analysis/ingress-sa-frontend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-sa-frontend
  namespace: sentiment-analysis
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    # 1
spec:
  rules:
    - host: sentiments.example.com
      http:
        paths:
        #  - path: /sentiments/ui(/|$)(.*)
          - path: /
            backend:
              serviceName: sa-frontend-service
              servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-web-app
  namespace: sentiment-analysis
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: sentiments.example.com
      http:
        paths:
          - path: /sentiment
            backend:
              serviceName: sa-web-app-lb
              servicePort: 80
